compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__tuple_0.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
assertion_line: 861
expression: "\npub fn main(x, y) {\n  case #(x, y) {\n    #(True, _) -> 1\n  }\n}\n"
---
warning: Inexhaustive patterns
  ┌─ /src/one/two.gleam:3:3
  │  
3 │ ╭   case #(x, y) {
4 │ │     #(True, _) -> 1
5 │ │   }
  │ ╰───^

This case expression does not have a pattern for all possible values.
If is run on one of the values without a pattern then it will crash.

The missing patterns are:

    #(False, _)

