compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__exhaustiveness__unreachable_string_pattern_after_prefix_in_multi_subject_case.snap
---
source: compiler-core/src/type_/tests/exhaustiveness.rs
expression: "pub fn main() {\n  let string = \"\"\n  let number = 1\n  case string, number {\n    \"ab\", 1 -> \"a\"\n    \"a\" <> _, _ -> \"b\"\n    \"ab\", _ -> \"c\"\n    _, _ -> \"d\"\n  }\n}"
---
----- SOURCE CODE
pub fn main() {
  let string = ""
  let number = 1
  case string, number {
    "ab", 1 -> "a"
    "a" <> _, _ -> "b"
    "ab", _ -> "c"
    _, _ -> "d"
  }
}

----- WARNING
warning: Unreachable pattern
  ┌─ /src/warning/wrn.gleam:7:5
  │
7 │     "ab", _ -> "c"
  │     ^^^^^^^

This pattern cannot be reached as a previous pattern matches the same
values.

Hint: It can be safely removed.
